address feedback from QA #9340